--- a/12 - Key Sequence Detection/index-FINISHED.html
+++ b/12 - Key Sequence Detection/index-FINISHED.html
@@ -6,20 +6,6 @@
   <script type="text/javascript" src="https://www.cornify.com/js/cornify.js"></script>
 </head>
 <body>
-<script>
-const pressed = [];
-const secretCode = 'wesbos';
-
-window.addEventListener('keyup', (e) => {
-  console.log(e.key);
-  pressed.push(e.key);
-  pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length);
-  if (pressed.join('').includes(secretCode)) {
-    console.log('DING DING!');
-    cornify_add();
-  }
-  console.log(pressed);
-});
-</script>
+<script src="index.js"></script>
 </body>
 </html>
